--- a/PerandusBacker/PerandusBacker.csproj
+++ b/PerandusBacker/PerandusBacker.csproj
@@ -15,6 +15,8 @@
     <None Remove="Controls\ItemsTable.xaml" />
     <None Remove="Pages\Login.xaml" />
     <None Remove="Pages\Main.xaml" />
+    <None Remove="Pages\Navigation\StashDashboard\StashExplorer.xaml" />
+    <None Remove="Pages\Navigation\StashDashboard\TabView.xaml" />
   </ItemGroup>
 
   <ItemGroup>
@@ -43,6 +45,11 @@
     <ProjectCapability Include="Msix" />
   </ItemGroup>
   <ItemGroup>
+    <Page Update="Pages\Navigation\StashDashboard\TabView.xaml">
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+  </ItemGroup>
+  <ItemGroup>
     <Page Update="Controls\ItemsTable.xaml">
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -54,6 +61,11 @@
   </ItemGroup>
   <ItemGroup>
     <Page Update="Pages\Login.xaml">
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+  </ItemGroup>
+  <ItemGroup>
+    <Page Update="Pages\Navigation\StashDashboard\StashExplorer.xaml">
       <Generator>MSBuild:Compile</Generator>
     </Page>
   </ItemGroup>
