Add installation info

--- a/PerandusBacker/PerandusBacker.csproj
+++ b/PerandusBacker/PerandusBacker.csproj
@@ -12,6 +12,17 @@
     <EnablePreviewMsixTooling>true</EnablePreviewMsixTooling>
     <PackageIcon>PerandusBacker_176.png</PackageIcon>
     <ApplicationIcon>Assets\Logos\PerandusBacker.ico</ApplicationIcon>
+    <GenerateAppInstallerFile>True</GenerateAppInstallerFile>
+    <AppxPackageSigningEnabled>True</AppxPackageSigningEnabled>
+    <PackageCertificateThumbprint>278D70DEE89E5283531F40C41738AEB4AD29C6BE</PackageCertificateThumbprint>
+    <AppxPackageSigningTimestampDigestAlgorithm>SHA256</AppxPackageSigningTimestampDigestAlgorithm>
+    <AppxAutoIncrementPackageRevision>True</AppxAutoIncrementPackageRevision>
+    <AppxPackageDir>D:\Projects\PerandusBacker\PerandusBacker\bin\AppPackages\</AppxPackageDir>
+    <AppxSymbolPackageEnabled>False</AppxSymbolPackageEnabled>
+    <GenerateTestArtifacts>True</GenerateTestArtifacts>
+    <AppxBundle>Never</AppxBundle>
+    <AppInstallerUri>https://github.com/jppianta/PerandusBacker</AppInstallerUri>
+    <HoursBetweenUpdateChecks>0</HoursBetweenUpdateChecks>
   </PropertyGroup>
   <ItemGroup>
     <Content Remove="Assets\LargeTile.scale-100.png" />
